--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@finta/types": "*",
     "@graphql-yoga/node": "^2.13.13",
     "@nhost/core": "^0.9.2",
     "@nhost/hasura-auth-js": "^1.6.2",
@@ -43,6 +44,7 @@
     "http-status-codes": "^2.2.0",
     "logsnag": "^0.1.6",
     "moment-timezone": "^0.5.39",
+    "next": "^13.0.6",
     "playwright": "^1.27.1",
     "randomstring": "^1.2.3",
     "react": "^18.2.0",
@@ -54,7 +56,6 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.6.1",
     "stripe": "^11.0.0",
-    "@finta/types": "*",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
