--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,14 +1,29 @@
 {
   "name": "app",
   "version": "0.0.0",
+  "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@nhost/core": "0.9.4",
+    "@nhost/nextjs": "^1.9.2",
+    "@nhost/react": "^0.15.1",
+    "@nhost/react-apollo": "^4.9.1",
+    "@segment/analytics-next": "^1.48.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
+    "graphql-tag": "^2.12.6",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9"
   }
 }
