--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9"
+    "@types/react-dom": "^18.0.9",
+    "tsconfig": "workspace:*"
   }
 }
