--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,7 +18,7 @@
     "eslint": "^8.4.1",
     "eslint-config-custom": "*",
     "react": "^18.2.0",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "tsup": "^5.10.1",
     "typescript": "^4.5.3"
   },
