--- a/apps/nhost/nhost/metadata/actions.yaml
+++ b/apps/nhost/nhost/metadata/actions.yaml
@@ -1,11 +1,4 @@
-actions:
-  - name: setupUser
-    definition:
-      kind: synchronous
-      handler: '{{API_BASE_URL}}/actions/setupUser'
-    permissions:
-      - role: user
-    comment: Helper action to make sure user has all necessary properties
+actions: []
 custom_types:
   enums: []
   input_objects: []
