closes dev-13-change-name

--- a/apps/nhost/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -188,3 +188,22 @@ delete_permissions:
       filter:
         id:
           _eq: X-Hasura-User-Id
+event_triggers:
+  - name: onUpdateUser
+    definition:
+      enable_manual: false
+      update:
+        columns:
+          - display_name
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
