--- a/apps/nhost/nhost/metadata/databases/default/tables/public_plaid_items.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/public_plaid_items.yaml
@@ -88,3 +88,21 @@ update_permissions:
       check:
         user_id:
           _eq: X-Hasura-User-Id
+event_triggers:
+  - name: onInsertPlaidItem
+    definition:
+      enable_manual: true
+      insert:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
