--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,6 +19,7 @@
     "@logtail/js": "^0.1.14",
     "@logtail/winston": "^0.1.14",
     "@nhost/core": "0.9.4",
+    "@nhost/hasura-storage-js": "^0.7.4",
     "@nhost/nextjs": "^1.9.2",
     "@nhost/react": "^0.15.1",
     "@nhost/react-apollo": "^4.9.1",
@@ -28,6 +29,7 @@
     "airtable": "^0.11.6",
     "analytics-node": "^6.2.0",
     "axios": "^1.2.1",
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "framer-motion": ">=4.0.0",
     "google-spreadsheet": "^3.3.0",
