--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -29,6 +29,7 @@
     "airtable": "^0.11.6",
     "analytics-node": "^6.2.0",
     "axios": "^1.2.1",
+    "cron-builder-ts": "^1.0.5",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "framer-motion": ">=4.0.0",
