--- a/apps/nhost/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -189,6 +189,23 @@ delete_permissions:
         id:
           _eq: X-Hasura-User-Id
 event_triggers:
+  - name: onInsertUser
+    definition:
+      enable_manual: true
+      insert:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
   - name: onUpdateUser
     definition:
       enable_manual: false
