--- a/apps/nhost/nhost/metadata/databases/default/tables/public_plaid_accounts.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/public_plaid_accounts.yaml
@@ -71,3 +71,22 @@ delete_permissions:
         item:
           user_id:
             _eq: X-Hasura-User-Id
+event_triggers:
+  - name: onUpdatePlaidAccount
+    definition:
+      enable_manual: false
+      update:
+        columns:
+          - name
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
