--- a/apps/nhost/nhost/metadata/databases/default/tables/public_plaid_items.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/public_plaid_items.yaml
@@ -106,3 +106,23 @@ event_triggers:
       paused: true
       schedule: 0 0 * * *
       timeout: 60
+  - name: onUpdatePlaidItem
+    definition:
+      enable_manual: false
+      update:
+        columns:
+          - consent_expires_at
+          - disabled_at
+          - error
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
