--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -30,6 +30,7 @@
     "analytics-node": "^6.2.0",
     "axios": "^1.2.1",
     "cron-builder-ts": "^1.0.5",
+    "customerio-node": "^3.4.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "framer-motion": ">=4.0.0",
@@ -43,6 +44,7 @@
     "moment-timezone": "^0.5.39",
     "next": "latest",
     "plaid": "^12.0.0",
+    "randomstring": "^1.2.3",
     "react": "latest",
     "react-datepicker": "^4.8.0",
     "react-dom": "latest",
