--- a/apps/nhost/nhost/metadata/databases/default/tables/public_destinations.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/public_destinations.yaml
@@ -108,3 +108,41 @@ update_permissions:
       check:
         user_id:
           _eq: X-Hasura-User-Id
+event_triggers:
+  - name: onInsertDestination
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
+  - name: onUpdateDestination
+    definition:
+      enable_manual: false
+      update:
+        columns:
+          - disabled_at
+          - table_configs
+          - name
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
