--- a/apps/nhost/nhost/metadata/databases/default/tables/public_sync_logs.yaml
+++ b/apps/nhost/nhost/metadata/databases/default/tables/public_sync_logs.yaml
@@ -38,3 +38,23 @@ select_permissions:
                 user_id:
                   _eq: X-Hasura-User-Id
       allow_aggregations: true
+event_triggers:
+  - name: onUpsertSyncLog
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+      update:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{API_BASE_URL}}/db/events'
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
