--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
+    "@graphql-yoga/node": "^2.13.13",
     "@logtail/js": "^0.1.14",
     "@logtail/winston": "^0.1.14",
     "@nhost/core": "0.9.4",
@@ -31,6 +32,7 @@
     "axios": "^1.2.1",
     "cron-builder-ts": "^1.0.5",
     "customerio-node": "^3.4.0",
+    "express": "^4.18.2",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "framer-motion": ">=4.0.0",
@@ -64,6 +66,7 @@
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
     "@graphql-codegen/typescript-operations": "^2.5.10",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@types/express": "^4.17.15",
     "@types/google-spreadsheet": "^3.3.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.38",
