--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -17,16 +17,25 @@
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
     "@graphql-yoga/node": "^2.13.13",
+    "@hookform/resolvers": "^2.9.10",
     "@logtail/js": "^0.1.14",
     "@logtail/winston": "^0.1.14",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@nhost/core": "0.9.4",
     "@nhost/hasura-storage-js": "^0.7.4",
     "@nhost/nextjs": "^1.9.2",
     "@nhost/react": "^0.15.1",
     "@nhost/react-apollo": "^4.9.1",
     "@notionhq/client": "^2.2.2",
+    "@prisma/client": "4.7.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@segment/analytics-next": "^1.48.0",
+    "@segment/analytics-node": "0.0.1-beta.8",
+    "@tanstack/react-query": "^4.20.4",
+    "@trpc/client": "^10.5.0",
+    "@trpc/next": "^10.5.0",
+    "@trpc/react-query": "^10.5.0",
+    "@trpc/server": "^10.5.0",
     "airtable": "^0.11.6",
     "analytics-node": "^6.2.0",
     "axios": "^1.2.1",
@@ -45,18 +54,22 @@
     "logsnag": "^0.1.6",
     "moment-timezone": "^0.5.39",
     "next": "latest",
+    "next-auth": "^4.18.6",
     "next-axiom": "^0.16.0",
+    "nodemailer": "^6.8.0",
     "plaid": "^12.0.0",
     "randomstring": "^1.2.3",
     "react": "latest",
     "react-datepicker": "^4.8.0",
     "react-dom": "latest",
+    "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "react-plaid-link": "^3.3.2",
     "react-query": "^3.39.2",
     "react-select": "^5.7.0",
     "stripe": "^11.3.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.1",
@@ -66,6 +79,7 @@
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
     "@graphql-codegen/typescript-operations": "^2.5.10",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@types/analytics-node": "^3.1.9",
     "@types/express": "^4.17.15",
     "@types/google-spreadsheet": "^3.3.0",
     "@types/lodash": "^4.14.191",
@@ -73,6 +87,7 @@
     "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
+    "prisma": "4.7.1",
     "tsconfig": "workspace:*"
   }
 }
