--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "tsconfig/nextjs.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "types/**/*.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "~/*": ["*"]
     },
-    "strict": false
+    "strict": true
   }
 }
