--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -69,7 +69,8 @@
     "react-select": "^5.7.0",
     "stripe": "^11.3.0",
     "winston": "^3.8.2",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zod-prisma": "^0.5.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.1",
