--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -28,7 +28,7 @@
     "@nhost/react": "^0.15.1",
     "@nhost/react-apollo": "^4.9.1",
     "@notionhq/client": "^2.2.2",
-    "@prisma/client": "4.7.1",
+    "@prisma/client": "4.8.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@segment/analytics-next": "^1.48.0",
     "@segment/analytics-node": "0.0.1-beta.8",
@@ -51,6 +51,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tag": "^2.12.6",
+    "inngest": "^0.8.9",
     "lodash": "^4.17.21",
     "logsnag": "^0.1.6",
     "moment-timezone": "^0.5.39",
@@ -71,7 +72,8 @@
     "stripe": "^11.3.0",
     "winston": "^3.8.2",
     "zod": "^3.20.2",
-    "zod-prisma": "^0.5.4"
+    "zod-prisma": "^0.5.4",
+    "zod-prisma-types": "^1.3.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.1",
@@ -89,7 +91,7 @@
     "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
-    "prisma": "4.7.1",
+    "prisma": "4.8.0",
     "tsconfig": "workspace:*"
   }
 }
