--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -88,6 +88,7 @@
     "@types/google-spreadsheet": "^3.3.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.38",
+    "@types/randomstring": "^1.1.8",
     "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
