--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -27,9 +27,14 @@
     "@notionhq/client": "^2.2.2",
     "@radix-ui/react-icons": "^1.1.1",
     "@segment/analytics-next": "^1.48.0",
+    "@trpc/client": "^10.7.0",
+    "@trpc/next": "^10.7.0",
+    "@trpc/react-query": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "airtable": "^0.11.6",
     "analytics-node": "^6.2.0",
     "axios": "^1.2.1",
+    "bcryptjs": "^2.4.3",
     "cron-builder-ts": "^1.0.5",
     "customerio-node": "^3.4.0",
     "express": "^4.18.2",
@@ -56,7 +61,8 @@
     "react-query": "^3.39.2",
     "react-select": "^5.7.0",
     "stripe": "^11.3.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.1",
@@ -66,6 +72,7 @@
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
     "@graphql-codegen/typescript-operations": "^2.5.10",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
     "@types/google-spreadsheet": "^3.3.0",
     "@types/lodash": "^4.14.191",
