--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -20,6 +20,7 @@
     "@logtail/js": "^0.1.14",
     "@logtail/winston": "^0.1.14",
     "@nhost/core": "0.9.4",
+    "@nhost/hasura-auth-js": "^1.7.0",
     "@nhost/hasura-storage-js": "^0.7.4",
     "@nhost/nextjs": "^1.9.2",
     "@nhost/react": "^0.15.1",
