--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -28,6 +28,7 @@
     "@notionhq/client": "^2.2.2",
     "@radix-ui/react-icons": "^1.1.1",
     "@segment/analytics-next": "^1.48.0",
+    "@tanstack/react-query": "^4.20.4",
     "@trpc/client": "^10.7.0",
     "@trpc/next": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
