--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -64,7 +64,8 @@
     "react-select": "^5.7.0",
     "stripe": "^11.3.0",
     "winston": "^3.8.2",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zod-prisma-types": "^1.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.1",
@@ -82,6 +83,8 @@
     "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
-    "tsconfig": "workspace:*"
+    "prisma": "4.7.1",
+    "tsconfig": "workspace:*",
+    "zod-prisma": "^0.5.4"
   }
 }
