--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,30 +11,34 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
-    "@chakra-ui/icons": "^2.0.13",
-    "@chakra-ui/react": "^2.4.3",
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@chakra-ui/icons": "2.0.13",
+    "@chakra-ui/react": "2.4.2",
+    "@chakra-ui/system": "2.3.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
     "@graphql-yoga/node": "^2.13.13",
     "@logtail/js": "^0.1.14",
+    "@logtail/node": "^0.1.0",
     "@logtail/winston": "^0.1.14",
     "@nhost/core": "0.9.4",
     "@nhost/hasura-auth-js": "^1.7.0",
     "@nhost/hasura-storage-js": "^0.7.4",
     "@nhost/nextjs": "^1.9.2",
-    "@nhost/react": "^0.15.1",
+    "@nhost/react": "0.17.0",
     "@nhost/react-apollo": "^4.9.1",
     "@notionhq/client": "^2.2.2",
+    "@prisma/client": "^4.8.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@segment/analytics-next": "^1.48.0",
+    "@segment/analytics-node": "0.0.1-beta.8",
     "@tanstack/react-query": "^4.20.4",
     "@trpc/client": "^10.7.0",
     "@trpc/next": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
     "airtable": "^0.11.6",
-    "analytics-node": "^6.2.0",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cron-builder-ts": "^1.0.5",
@@ -42,7 +46,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
-    "framer-motion": ">=4.0.0",
+    "framer-motion": "^6.5.1",
     "google-spreadsheet": "^3.3.0",
     "googleapis": "^109.0.1",
     "graphql": "^16.6.0",
@@ -63,6 +67,10 @@
     "react-query": "^3.39.2",
     "react-select": "^5.7.0",
     "stripe": "^11.3.0",
+    "superjson": "^1.12.1",
+    "ts-node": ">=10",
+    "tslib": "^1.10.0",
+    "typescript": ">=3.0.0",
     "winston": "^3.8.2",
     "zod": "^3.20.2",
     "zod-prisma-types": "^1.4.0"
@@ -75,15 +83,18 @@
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
     "@graphql-codegen/typescript-operations": "^2.5.10",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@types/analytics-node": "^3.1.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
     "@types/google-spreadsheet": "^3.3.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.38",
+    "@types/randomstring": "^1.1.8",
     "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
-    "prisma": "4.7.1",
+    "analytics-node": "^6.2.0",
+    "prisma": "4.8.0",
     "tsconfig": "workspace:*",
     "zod-prisma": "^0.5.4"
   }
