--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -9,12 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.13",
-    "@chakra-ui/react": "^2.4.3",
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@chakra-ui/react": "2.4.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
-    "framer-motion": ">=4.0.0",
+    "framer-motion": "^6.5.1",
     "next": "^13.1.1",
     "next-axiom": "^0.16.0",
     "react": "^18.2.0",
