--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "eslint": ">=7.0.0 <8.0.0 || >=8.0.0 <9.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-turbo": "latest",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-config-turbo": "latest"
+    "typescript": ">=2.8.0"
   },
   "publishConfig": {
     "access": "public"
