--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -24,13 +24,14 @@
   },
   "dependencies": {
     "@babel/core": ">=7.0.0 <8.0.0",
-    "@chakra-ui/react": "^2.4.3",
+    "@chakra-ui/anatomy": "^2.1.1",
+    "@chakra-ui/react": "2.4.2",
     "@chakra-ui/styled-system": ">=2.0.0",
     "@chakra-ui/theme-tools": "^2.0.14",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@notionhq/client": "^2.2.2",
-    "framer-motion": ">=4.0.0",
+    "framer-motion": "^6.5.1",
     "plaid": "^12.0.0",
     "react-dom": ">=18"
   }
