Consolidated login and signup form

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
     "@graphql-yoga/node": "^2.13.13",
+    "@hookform/resolvers": "^2.9.10",
     "@logtail/js": "^0.1.14",
     "@logtail/node": "^0.1.0",
     "@logtail/winston": "^0.1.14",
@@ -62,6 +63,7 @@
     "react": "latest",
     "react-datepicker": "^4.8.0",
     "react-dom": "latest",
+    "react-hook-form": "^7.41.2",
     "react-icons": "^4.7.1",
     "react-plaid-link": "^3.3.2",
     "react-query": "^3.39.2",
