--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -42,6 +42,7 @@
     "airtable": "^0.11.6",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "cron-builder-ts": "^1.0.5",
     "customerio-node": "^3.4.0",
     "express": "^4.18.2",
