Fixed how req body is parsed

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -42,7 +42,6 @@
     "airtable": "^0.11.6",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
     "cron-builder-ts": "^1.0.5",
     "customerio-node": "^3.4.0",
     "express": "^4.18.2",
@@ -56,6 +55,7 @@
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "logsnag": "^0.1.6",
+    "micro": "^10.0.1",
     "moment-timezone": "^0.5.39",
     "next": "latest",
     "next-axiom": "^0.16.0",
