--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -58,6 +58,7 @@
     "micro": "^10.0.1",
     "moment-timezone": "^0.5.39",
     "next": "latest",
+    "next-auth": "^4.18.7",
     "next-axiom": "^0.16.0",
     "plaid": "^12.0.0",
     "randomstring": "^1.2.3",
