--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
+    "@google-cloud/storage": "^6.8.0",
     "@graphql-yoga/node": "^2.13.13",
     "@hookform/resolvers": "^2.9.10",
     "@logtail/js": "^0.1.14",
@@ -53,6 +54,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tag": "^2.12.6",
+    "inngest": "^0.8.9",
     "lodash": "^4.17.21",
     "logsnag": "^0.1.6",
     "micro": "^10.0.1",
