closes dev-58-no-redirection-after-logging-in

--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -8,5 +8,10 @@
       "~/*": ["*"]
     },
     "strict": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 }
