--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
+    "@radix-ui/react-icons": "^1.1.1",
     "framer-motion": "^6.5.1",
     "next": "^13.1.1",
     "next-axiom": "^0.16.0",
@@ -24,6 +25,7 @@
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "4.9.4"
   }
 }
