--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -47,6 +47,7 @@
     "bcryptjs": "^2.4.3",
     "cron-builder-ts": "^1.0.5",
     "customerio-node": "^3.4.0",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
