--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -15,11 +15,17 @@
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
     "@radix-ui/react-icons": "^1.1.1",
+    "add": "^2.0.6",
+    "contentlayer": "^0.2.9",
+    "date-fns": "^2.29.3",
     "framer-motion": "^6.5.1",
     "next": "^13.1.1",
     "next-axiom": "^0.16.0",
+    "next-contentlayer": "^0.2.9",
+    "next-seo": "^5.15.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.38",
