--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.10.5",
     "@finta/shared": "workspace:*",
     "@radix-ui/react-icons": "^1.1.1",
+    "@segment/analytics-next": "^1.48.0",
+    "@segment/snippet": "^4.15.3",
     "add": "^2.0.6",
     "contentlayer": "^0.2.9",
     "date-fns": "^2.29.3",
